<resources>
    <string name="app_name">Hands Off</string>
    <string name="action_menu" />
    <string name="logo" />

    <string-array name="screens_array">
        <item>Home</item>
        <item>Favourites</item>
        <item>Instruction Videos</item>
        <item>Shopping List</item>
        <item>My Recipes</item>
        <item>History</item>
        <item>Settings</item>

    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_favourite_list">FavouriteList</string>
    <string name="add_fave">Add To Favourites</string>
    <string name="added_fave">Added</string>
    <string name="view_fave">View Favourites</string>

    <!-- This contains a list of strings to be used in the shopping list GUI. -->
    <string name="delete"> Delete </string>
    <string name="add_your_message">Add the item name</string>
    <string name="add_quantity">Add the Quantity</string>
    <string name="add_unit">Add the Units</string>
    <string name="save"> Save</string>
    <string name="clearAll"> Clear All</string>
    <string name="clearChecked"> Clear Checked</string>
    <string name="shopping_list_name"> Shopping List</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="units">Units</string>

    <!-- This contains a list of strings to be used in the Instructional Videos GUI. -->
    <string name="video1"> How to peel vegetables </string>
    <string name="video2"> How to use a Knife </string>

    <!-- This contains a list of strings to be used in the search page. -->
    <string name="hint">Keywords, Authors, &#8230;</string>
    <string name="searchButton">search button</string>
    <string name="backButton">back button</string>

    <string name="waitingForServer">Waiting for server..</string>
    <string name="serverTimeOut">[ER] Server Timeout\nCheck internet connection.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="no_ingredients">NO INGREDIENTS!</string>
    <string name="start">Start</string>
    <string name="recipe_name">RECIPE NAME</string>
    <string name="instructional_video_name">VIDEO NAME</string>
    <string name="_0">0</string>
    <string name="_0_mins">0 mins</string>
    <string name="title_activity_create_arecipe">CreateARecipe</string>

    <!-- This contains a list of strings to be used in the Create a Recipe GUI-->
    <string name="introductory_comment">Welcome To Create A Recipe</string>
    <string name="title_request">Title</string>
    <string name="description_request">Description</string>
    <string name="time_request">Time</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="ingredient_request">Add Ingredient</string>
    <string name="select_thumbnail_request">Select Recipe Image</string>
    <string name="thumbnai_image_selected">Image Selected</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="filter_explanation">Please note that, for the health and safety of our users,
        self-created recipes will not have filters or tags to indicate dietary suitability.</string>

    <!-- This contains a list of strings to be used in the Add Ingredient GUI-->
    <string name="ingredient_name">Name Of Ingredient</string>
    <string name="ingredient_number_of_servings">Number of servings</string>
    <string name="ingredient_quantity">Quantity (eg: 100g, 0.5 cup)</string>
    <string name="ingredient_add">Add</string>
    <string name="ingredients_exit">Exit</string>
    <string name="title_activity_add_ingredients">AddIngredients</string>
</resources>
