<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- This shows the text 'Add the item name' so that users know where to click. -->
    <EditText
        android:id="@+id/editMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:hint="@string/add_your_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/buttonColour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType= "text"/>

    <!-- This shows the text 'Add the quantity' so that users know where to click. -->
    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:hint="@string/add_quantity"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/buttonColour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMessage"
        android:inputType= "text"/>

    <!-- This shows the text 'Add the units' so that users know where to click. -->
    <EditText
        android:id="@+id/editUnit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:hint="@string/add_unit"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/buttonColour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editQuantity"
        android:inputType= "text"/>

    <!-- This is the save button that will save whatever message the user types. -->
    <Button
        android:id="@+id/editMessageSaveButton"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/buttonColour"
        android:onClick="saveButtonClicked"
        android:text="@string/save"
        android:textColor="@color/buttonTextColour"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editMessageDeleteButton"
        tools:ignore="RtlHardcoded" />

    <!-- This is the delete button that will delete the message the user has clicked on. -->
    <Button
        android:id="@+id/editMessageDeleteButton"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/buttonColour"
        android:onClick="deleteButtonClicked"
        android:text="@string/delete"
        android:textColor="@color/buttonTextColour"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />


</android.support.constraint.ConstraintLayout>