<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.group3.swengandroidapp.AddIngredients"
    tools:showIn="@layout/activity_add_ingredients">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/ingredient_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ingredient_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/ingredient_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ingredient_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/ingredient_add"
            android:textColor="@color/buttonTextColour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="183dp" />

        <Button
            android:id="@+id/exit_ingredients_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:background="@drawable/rounded_button"
            android:text="@string/ingredients_exit"
            android:textColor="@color/buttonTextColour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_add" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
